--- a/KwizzadExample/KwizzadExample/Base.lproj/Main.storyboard
+++ b/KwizzadExample/KwizzadExample/Base.lproj/Main.storyboard
@@ -37,6 +37,13 @@
                                     <action selector="startAd:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xEQ-wd-FZ7"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Kwizzad Swift Example App" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7d3-LM-4Hl">
+                                <rect key="frame" x="82" y="28" width="211" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
